[tool.poetry]
name = "leetcode-python"
version = "1.0.0"
description = ""
authors = ["Mehran Kader <kmehran.1106@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.1.2"
pre-commit = "^2.19.0"
flake8 = "^4.0.1"
mypy = "^0.961"
black = "^22.6.0"
click = "8.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
